practice with event listeners

--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
       This is the glorious text-content!
     </div>
   </div>
+
+  <button onclick="alert('Hello World')">Click me</button>
+
+  <button id="btn">Click me</button>
+
+  <button id="btn2">Click Me Too</button>
 </body>
 </html>
