--- a/index.html
+++ b/index.html
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <script src="script.js" defer></script>
-</head>
-<!-- The DOM -->
-<body>
-  <h1>
-    THE TITLE OF YOUR WEBPAGE
-  </h1>
-  <div id="container">
-  	<div class="content">
-      This is the glorious text-content!
-    </div>
-  </div>
-
-  <button onclick="alert('Hello World')">Click me</button>
-
-  <button id="btn">Click me</button>
-
-  <button id="btn2">Click Me Too</button>
-</body>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple DOM example</title>
+  </head>
+  <body>
+      <section>
+        <img src="dinosaur.png" alt="A red Tyrannosaurus Rex: A two legged dinosaur standing upright like a human, with small arms, and a large head with lots of sharp teeth.">
+        <p>Here we will add a link to the <a href="https://www.mozilla.org/">Mozilla homepage</a></p>
+      </section>
+    
+      <script src="script.js"></script>
+  </body>
 </html>
